package ca.mcmaster.se2aa4.island.team102;

public enum Heading {
    //This represents the cardinal directions in which a drone can head.
    N, 
    S, 
    E, 
    W; 
}
