@startuml HighLevel_UML

interface IExplorerRaid
interface AlgorithmSelector
interface ResultAcknowledger
interface ScanParsing

class Compass
class DefaultResultAcknowledger implements ResultAcknowledger
class Drone
class Echoer
class Explorer implements IExplorerRaid 
class Location
class MapMaker 
class PrimaryAlgorithm implements AlgorithmSelector
class Runner
class ScanParser implements ScanParsing
class Tracker

enum State
enum Heading

Compass ..> Heading

Drone ..> State
Drone --* Drone

Explorer --o  Echoer
Explorer --o "1" Drone
Explorer --o Compass
Explorer ..> ScanParsing
Explorer --o Tracker
Explorer ..> AlgorithmSelector
Explorer ..> ResultAcknowledger

MapMaker --> Compass
MapMaker o-- Explorer
MapMaker ..> Heading

PrimaryAlgorithm --> Location

ResultAcknowledger ..> State

Runner - Explorer

@enduml